syntax = "proto3";

package auth_service;

service AuthService {
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse);
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}

message RegisterRequest {
    string username = 1;
    string password = 2;
    string email = 3;
}

message RegisterResponse {
    string message = 1;
}

message AuthenticateRequest {
    string token = 1;
}

message AuthenticateResponse {
    bool valid = 1;
    string message = 2;
}
